--- a/package.json
+++ b/package.json
@@ -2,14 +2,33 @@
   "name": "rhda-github-action",
   "version": "1.0.0",
   "description": "This action reflects the Red Hat Dependency Analytics VSCode extension for Github Actions.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "generate-ios": "npx action-io-generator -w -o ./src/generated/inputs-outputs.ts"
+  "homepage": "https://github.com/RHEcosystemAppEng/rhda-github-action#README.md",
+  "bugs": "https://github.com/RHEcosystemAppEng/rhda-github-action/issues",
+  "repository": "github:RHEcosystemAppEng/rhda-github-action",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
-  "keywords": [],
+  "keywords": [
+    "analysis",
+    "rhda",
+    "exhort",
+    "secure",
+    "supply-chain",
+    "vulnerability"
+  ],
+  "engines": {
+    "node": ">= 20.0.0",
+    "npm": ">= 10.0.0"
+  },
+  "type": "module",
+  "main": "dist/src/index.js",
+  "module": "dist/src/index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "generate-ios": "npx action-io-generator -w -o ./src/generated/inputs-outputs.ts",
+    "compile": "tsc -p ./"
+  },
   "devDependencies": {
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
@@ -18,6 +37,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@redhat-actions/action-io-generator": "^1.5.0"
+    "@redhat-actions/action-io-generator": "^1.5.0",
+    "@RHEcosystemAppEng/exhort-javascript-api": "^0.1.1-ea.14"
   }
 }
