--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@actions/artifact": "^2.1.4",
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@redhat-actions/action-io-generator": "^1.5.0",
