--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@redhat-actions/action-io-generator": "^1.5.0",
-    "@rhecosystemappeng/exhort-javascript-api": "^0.1.1-ea.14"
+    "@rhecosystemappeng/exhort-javascript-api": "^0.1.1-ea.26",
+    "@types/sarif": "^2.1.7"
   }
 }
