--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@actions/artifact": "^2.1.4",
     "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
     "@redhat-actions/action-io-generator": "^1.5.0",
     "@rhecosystemappeng/exhort-javascript-api": "^0.1.1-ea.26",
