chore: add secure pr checkout and labels
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
-on: [push]
+name: RHDA Github Action Workflow
 
+on:
+  pull_request_target:
+    types: [assigned, opened, synchronize, reopened, edited]
+  
 jobs:
   rhda_job:
     runs-on: ubuntu-latest
