--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: RHDA Github Action Workflow
 
 on:
  workflow_dispatch:
- pull_request_target:
+ pull_request:
    types: [opened, synchronize, reopened, labeled, edited]
   
 jobs:
