ci: change target manifest file path
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.github/workflows/rhda.yml
+++ b/.github/workflows/rhda.yml
@@ -36,5 +36,6 @@ jobs:
         id: test-rhda
         uses: ./ # Uses an action in the root directory
         with:
-          manifest_file_path: manifests/maven/pom.xml
+          manifest_file_path: manifests/golang/go.mod
+          use_python_virtual_environment: true
         
