chore: adjust image ref in description
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.github/workflows/rhda.yml
+++ b/.github/workflows/rhda.yml
@@ -53,5 +53,5 @@ jobs:
         id: test-rhda
         uses: ./ # Uses an action in the root directory
         with:
-          manifest_file_path: manifests/docker/Dockerfile
+          manifest_file_path: manifests/maven/pom.xml
         
