--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "npm": ">= 10.0.0"
   },
   "type": "module",
-  "main": "dist/src/index.js",
-  "module": "dist/src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "author": "",
   "license": "ISC",
   "scripts": {
     "generate-ios": "npx action-io-generator -w -o ./src/generated/inputs-outputs.ts",
-    "compile": "tsc -p ./"
+    "build": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt"
   },
   "devDependencies": {
+    "@redhat-actions/action-io-generator": "^1.5.0",
     "@types/node": "^20.11.24",
+    "@types/sarif": "^2.1.7",
+    "@vercel/ncc": "^0.38.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
@@ -39,8 +42,6 @@
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
     "@actions/github": "^6.0.0",
-    "@redhat-actions/action-io-generator": "^1.5.0",
-    "@rhecosystemappeng/exhort-javascript-api": "^0.1.1-ea.42",
-    "@types/sarif": "^2.1.7"
+    "@rhecosystemappeng/exhort-javascript-api": "^0.1.1-ea.42"
   }
 }
