--- a/.github/workflows/test-rhda-action.yml
+++ b/.github/workflows/test-rhda-action.yml
@@ -38,7 +38,7 @@ jobs:
           skopeo --version
 
       - name: RHDA analysis
-        uses: RHEcosystemAppEng/rhda-github-action@main
+        uses: RHEcosystemAppEng/rhda-github-action@chore/remove-user-auth 
 
       # - name: Test RHDA
       #   id: test-rhda
