--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
   "license": "ISC",
   "scripts": {
     "generate-ios": "npx action-io-generator -w -o ./src/generated/inputs-outputs.ts",
-    "bundle": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt"
+    "bundle": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix"
   },
   "devDependencies": {
     "@redhat-actions/action-io-generator": "^1.5.0",
     "@types/node": "^20.11.24",
     "@types/sarif": "^2.1.7",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
     "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.57.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
