--- a/action.yml
+++ b/action.yml
@@ -2,138 +2,138 @@ name: Red Hat Dependency Analytics (RHDA)
 description: Analyze vulnerabilities in application dependencies
 author: Red Hat
 branding:
-  icon: circle
-  color: red
+    icon: circle
+    color: red
 
 inputs:
-  manifest_directory:
-    description: Path to the directory containing the manifest_file.
-    required: false
-  manifest_file:
-    description: Name (basename) of the manifest file to analyze. This file must exist in the manifest_directory.
-    required: false
-  rhda_report_name:
-    description: Name of the file where the Red Hat Dependency Analytics report will be saved.
-    required: false
-    default: "redhat-dependency-analytics-report"
-  github_token:
-    description: Github token to upload SARIF file to the GitHub
-    required: false
-    default: ${{ github.token }}
-  upload_sarif:
-    description: |
-      Upload the generated SARIF file, by default it is set to "true".
-      If you don't want to upload SARIF file set this input to "false"
-    required: false
-    default: "true"
-  upload_artifact:
-    description: |
-      Upload the generated RHDA report JSON file and SARIF file as an artifact.
-    required: false
-    default: "true"
-  artifact_filename:
-    description: |
-      File name of the artifact to upload.
-      By default it is named as 'redhat-dependency-analytics-report'
-    required: false
-    default: "redhat-dependency-analytics-report"
-  fail_on:
-    description: |
-      Fail the workflow if vulnerability is found in the project.
-      To set failure when vulnerability severity level is either "error" or "warning" set this input to "warning".
-      By default it is set to fail when severity level is "error",
-      or if you don't want to fail the action set this input to "never"
-    required: false
-    default: "error"
-  use_python_virtual_environment:
-    description: Automates the installation of missing packages in a Python virtual environment when set to true.
-    required: false
-    default: "false"
-  use_go_mvs:
-    description: Use the Minimal Version Selection (MVS) algorithm to select a set of module versions to use when building Go packages.
-    required: false
-    default: "false"
-  enable_python_best_efforts_installation:
-    description: "Installs Python packages tailored to the Python version in use, disregarding declared versions. Note: Requires settings Match Manifest Versions to be set to false and Use Python Virtual Environment to be set to true."
-    required: false
-    default: "false"
-  use_pip_dep_tree:
-    description: Use lightweight pipdeptree command line tool as the data source for building the Python dependency tree. This may significantly enhance analysis time.
-    required: false
-    default: "false"
-  match_manifest_version:
-    description: Restricts RHDA from performing analysis on dependency tags that do not match the tags requested within the manifest files.
-    required: true
-    default: "false"
-  mvn_executable_path:
-    description: Specifies absolute path of mvn executable.
-    required: false
-    default: "mvn"
-  gradle_executable_path:
-    description: Specifies absolute path of gradle executable.
-    required: false
-    default: "gradle"
-  npm_executable_path:
-    description: Specifies absolute path of npm executable.
-    required: false
-    default: "npm"
-  go_executable_path:
-    description: Specifies absolute path of go executable.
-    required: false
-    default: "go"
-  python3_executable_path:
-    description: Specifies absolute path of python3 executable, python3 takes precedence over python.
-    required: false
-    default: "python3"
-  pip3_executable_path:
-    description: Specifies absolute path of pip3 executable, pip3 takes precedence over pip.
-    required: false
-    default: "pip3"
-  python_executable_path:
-    description: Specifies absolute path of python executable, python3 takes precedence over python.
-    required: false
-    default: "python"
-  pip_executable_path:
-    description: Specifies absolute path of pip executable, pip3 takes precedence over pip.
-    required: false
-    default: "pip"
-  syft_executable_path:
-    description: Specifies absolute path of syft executable.
-    required: false
-    default: "syft"
-  syft_config_path:
-    description: Specifies absolute path to the syft configuration file.
-    required: false
-    default: ""
-  skopeo_executable_path:
-    description: Specifies absolute path of skopeo executable.
-    required: false
-    default: "skopeo"
-  skopeo_config_path:
-    description: Specifies absolute path to the authentication file used by 'skopeo inspect'.
-    required: false
-    default: ""
-  docker_executable_path:
-    description: Specifies absolute path of docker executable.
-    required: false
-    default: "docker"
-  podman_executable_path:
-    description: Specifies absolute path of podman executable.
-    required: false
-    default: "podman"
-  image_platform:
-    description: Specifies platform used for multi-arch images.
-    required: false
-    default: ""
+    manifest_directory:
+        description: Path to the directory containing the manifest_file.
+        required: false
+    manifest_file:
+        description: Name (basename) of the manifest file to analyze. This file must exist in the manifest_directory.
+        required: false
+    rhda_report_name:
+        description: Name of the file where the Red Hat Dependency Analytics report will be saved.
+        required: false
+        default: 'redhat-dependency-analytics-report'
+    github_token:
+        description: Github token to upload SARIF file to the GitHub
+        required: false
+        default: ${{ github.token }}
+    upload_sarif:
+        description: |
+            Upload the generated SARIF file, by default it is set to "true".
+            If you don't want to upload SARIF file set this input to "false"
+        required: false
+        default: 'true'
+    upload_artifact:
+        description: |
+            Upload the generated RHDA report JSON file and SARIF file as an artifact.
+        required: false
+        default: 'true'
+    artifact_filename:
+        description: |
+            File name of the artifact to upload.
+            By default it is named as 'redhat-dependency-analytics-report'
+        required: false
+        default: 'redhat-dependency-analytics-report'
+    fail_on:
+        description: |
+            Fail the workflow if vulnerability is found in the project.
+            To set failure when vulnerability severity level is either "error" or "warning" set this input to "warning".
+            By default it is set to fail when severity level is "error",
+            or if you don't want to fail the action set this input to "never"
+        required: false
+        default: 'error'
+    use_python_virtual_environment:
+        description: Automates the installation of missing packages in a Python virtual environment when set to true.
+        required: false
+        default: 'false'
+    use_go_mvs:
+        description: Use the Minimal Version Selection (MVS) algorithm to select a set of module versions to use when building Go packages.
+        required: false
+        default: 'false'
+    enable_python_best_efforts_installation:
+        description: 'Installs Python packages tailored to the Python version in use, disregarding declared versions. Note: Requires settings Match Manifest Versions to be set to false and Use Python Virtual Environment to be set to true.'
+        required: false
+        default: 'false'
+    use_pip_dep_tree:
+        description: Use lightweight pipdeptree command line tool as the data source for building the Python dependency tree. This may significantly enhance analysis time.
+        required: false
+        default: 'false'
+    match_manifest_version:
+        description: Restricts RHDA from performing analysis on dependency tags that do not match the tags requested within the manifest files.
+        required: true
+        default: 'false'
+    mvn_executable_path:
+        description: Specifies absolute path of mvn executable.
+        required: false
+        default: 'mvn'
+    gradle_executable_path:
+        description: Specifies absolute path of gradle executable.
+        required: false
+        default: 'gradle'
+    npm_executable_path:
+        description: Specifies absolute path of npm executable.
+        required: false
+        default: 'npm'
+    go_executable_path:
+        description: Specifies absolute path of go executable.
+        required: false
+        default: 'go'
+    python3_executable_path:
+        description: Specifies absolute path of python3 executable, python3 takes precedence over python.
+        required: false
+        default: 'python3'
+    pip3_executable_path:
+        description: Specifies absolute path of pip3 executable, pip3 takes precedence over pip.
+        required: false
+        default: 'pip3'
+    python_executable_path:
+        description: Specifies absolute path of python executable, python3 takes precedence over python.
+        required: false
+        default: 'python'
+    pip_executable_path:
+        description: Specifies absolute path of pip executable, pip3 takes precedence over pip.
+        required: false
+        default: 'pip'
+    syft_executable_path:
+        description: Specifies absolute path of syft executable.
+        required: false
+        default: 'syft'
+    syft_config_path:
+        description: Specifies absolute path to the syft configuration file.
+        required: false
+        default: ''
+    skopeo_executable_path:
+        description: Specifies absolute path of skopeo executable.
+        required: false
+        default: 'skopeo'
+    skopeo_config_path:
+        description: Specifies absolute path to the authentication file used by 'skopeo inspect'.
+        required: false
+        default: ''
+    docker_executable_path:
+        description: Specifies absolute path of docker executable.
+        required: false
+        default: 'docker'
+    podman_executable_path:
+        description: Specifies absolute path of podman executable.
+        required: false
+        default: 'podman'
+    image_platform:
+        description: Specifies platform used for multi-arch images.
+        required: false
+        default: ''
 
 outputs:
-  rhda_report_json:
-    description: Generated Red Hat Dependency Analytics Report in JSON format
-  rhda_report_sarif:
-    description: Generated Red Hat Dependency Analytics Report in SARIF format
-  artifact_id:
-    description: Name of the uploaded artifact
+    rhda_report_json:
+        description: Generated Red Hat Dependency Analytics Report in JSON format
+    rhda_report_sarif:
+        description: Generated Red Hat Dependency Analytics Report in SARIF format
+    artifact_id:
+        description: Name of the uploaded artifact
 
 runs:
-  using: 'node20'
-  main: 'dist/index.js'
+    using: 'node20'
+    main: 'dist/index.js'
