--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "lint": "eslint . --ext .ts,.tsx",
         "lint:fix": "eslint . --ext .ts,.tsx --fix",
         "format:write": "npx prettier --write .",
-        "format:check": "npx prettier --check ."
+        "format:check": "npx prettier --check .",
+        "test": "vitest"
     },
     "devDependencies": {
         "@redhat-actions/action-io-generator": "^1.5.0",
@@ -45,7 +46,8 @@
         "eslint-plugin-prettier": "^5.1.3",
         "prettier": "^3.3.1",
         "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "vitest": "^1.6.0"
     },
     "dependencies": {
         "@actions/artifact": "^2.1.4",
