--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "lint:fix": "eslint . --ext .ts,.tsx --fix",
         "format:write": "npx prettier --write .",
         "format:check": "npx prettier --check .",
-        "test": "vitest"
+        "test": "vitest",
+        "coverage": "vitest run --coverage"
     },
     "devDependencies": {
         "@redhat-actions/action-io-generator": "^1.5.0",
@@ -41,13 +42,14 @@
         "@typescript-eslint/eslint-plugin": "^7.12.0",
         "@typescript-eslint/parser": "^7.12.0",
         "@vercel/ncc": "^0.38.1",
+        "@vitest/coverage-v8": "^2.0.1",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "prettier": "^3.3.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3",
-        "vitest": "^1.6.0"
+        "vitest": "^2.0.1"
     },
     "dependencies": {
         "@actions/artifact": "^2.1.4",
