--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,8 +4,8 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: Run ESLint
+  lint-and-test:
+    name: Lint and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -25,6 +25,9 @@ jobs:
         
       - name: Run lint
         run: npm run lint
+      
+      - name: Run test
+        run: npm run test
   
   check-dist:
     name: Check Distribution
