--- a/.github/workflows/scan_gradle.yaml
+++ b/.github/workflows/scan_gradle.yaml
@@ -31,9 +31,16 @@ jobs:
           distribution: temurin
           java-version: '20'
 
+      - name: Install gradle dependencies
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd manifests/gradle/
+          gradle dependencies
+          cd ../../
+
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@main
+        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
         with:
           manifest_directory: manifests/gradle
           manifest_file: ${{ matrix.manifest_file }}
@@ -41,12 +48,14 @@ jobs:
           fail_on: never
 
       - name: Print JSON analysis report
-        if: ${{ always() && steps.rhda_scan.outputs.crda_report_json }}
-        run: cat ${{ steps.rhda_scan.outputs.crda_report_json }}
+        if: ${{ always() && steps.rhda_scan.outputs.rhda_report_json }}
+        run: cat ${{ steps.rhda_scan.outputs.rhda_report_json }}
+        shell: bash
 
       - name: Print SARIF analysis report
-        if: ${{ always() && steps.rhda_scan.outputs.crda_report_sarif }}
-        run: cat ${{ steps.rhda_scan.outputs.crda_report_sarif }}
+        if: ${{ always() && steps.rhda_scan.outputs.rhda_report_sarif }}
+        run: cat ${{ steps.rhda_scan.outputs.rhda_report_sarif }}
+        shell: bash
 
       - name: Print Artifact ID
         run: echo ${{ steps.rhda_scan.outputs.artifact_id }}
