--- a/.github/workflows/scan_podman.yaml
+++ b/.github/workflows/scan_podman.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install syft
         run: |
-            curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin
+            curl -sSfL https://raw.githubusercontent.com/anchore/syft/main/install.sh | sh -s -- -b /usr/local/bin v1.7.0
 
       - name: Install skopeo
         run: |
@@ -42,7 +42,7 @@ jobs:
 
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@main
+        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
         with:
           manifest_directory: manifests/podman
           manifest_file: ${{ matrix.manifest_file }}
@@ -50,12 +50,14 @@ jobs:
           fail_on: never
 
       - name: Print JSON analysis report
-        if: ${{ always() && steps.rhda_scan.outputs.crda_report_json }}
-        run: cat ${{ steps.rhda_scan.outputs.crda_report_json }}
+        if: ${{ always() && steps.rhda_scan.outputs.rhda_report_json }}
+        run: cat ${{ steps.rhda_scan.outputs.rhda_report_json }}
+        shell: bash
 
       - name: Print SARIF analysis report
-        if: ${{ always() && steps.rhda_scan.outputs.crda_report_sarif }}
-        run: cat ${{ steps.rhda_scan.outputs.crda_report_sarif }}
+        if: ${{ always() && steps.rhda_scan.outputs.rhda_report_sarif }}
+        run: cat ${{ steps.rhda_scan.outputs.rhda_report_sarif }}
+        shell: bash
 
       - name: Print Artifact ID
         run: echo ${{ steps.rhda_scan.outputs.artifact_id }}
