ci: set RHDA scan tag in integration test workflows
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.github/workflows/scan_npm.yaml
+++ b/.github/workflows/scan_npm.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
+        uses: RHEcosystemAppEng/rhda-github-action@main
         with:
           manifest_directory: manifests/npm
           manifest_file: ${{ matrix.manifest_file }}
