--- a/.github/workflows/scan_podman.yaml
+++ b/.github/workflows/scan_podman.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
+        uses: RHEcosystemAppEng/rhda-github-action@main
         with:
           manifest_directory: manifests/podman
           manifest_file: ${{ matrix.manifest_file }}
