--- a/.github/workflows/scan_python.yaml
+++ b/.github/workflows/scan_python.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
+        uses: RHEcosystemAppEng/rhda-github-action@main
         with:
           manifest_directory: manifests/python
           manifest_file: ${{ matrix.manifest_file }}
