--- a/.github/workflows/scan_maven.yaml
+++ b/.github/workflows/scan_maven.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: RHDA Scan
         id: rhda_scan
-        uses: RHEcosystemAppEng/rhda-github-action@chore/unit-tests
+        uses: RHEcosystemAppEng/rhda-github-action@main
         with:
           manifest_directory: manifests/maven
           manifest_file: ${{ matrix.manifest_file }}
